--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,8 @@
   <h1>Vijay</h1>
 </center>
 <hr>
+
+
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae maiores neque corporis, ipsum ullam nesciunt consequuntur eligendi iure quas, saepe tempore. Earum, dolores eum neque exercitationem eaque cumque nostrum placeat.
+</p>
